Final working code for tic-tac-toe

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 :root {
     --cell-size: 175px;
-    --mark-size: cal(var(--cell-size) * .9)
+    --mark-size: calc(var(--cell-size) * .9)
 }
 
 body {
@@ -22,10 +22,23 @@ body {
     grid-template-columns: repeat(3, auto);
 }
 
+h1 {
+    font-family: 'Zen Tokyo Zoo', cursive;
+    font-size: 5rem;
+    margin-bottom: -75px;
+    display: flex;
+    justify-content: center;
+}
+
 .cell {
     width: var(--cell-size);
     height: var(--cell-size);
     border: 1px solid rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
 }
 
 .cell:first-child,
@@ -46,9 +59,101 @@ body {
 .cell:nth-child(7),
 .cell:nth-child(8) {
     border-bottom: none;
-
 }
 
-.cell:hover {
+.cell.x::before,
+.cell.x::after {
     background-color: tomato;
+}
+
+.cell.circle::before,
+.cell.circle::after {
+    background-color: rgb(45, 99, 247);
+}
+
+.cell.x,
+.cell.circle {
+    cursor: not-allowed;
+}
+
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after {
+    background-color: lightcoral;
+}
+
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after {
+    background-color: lightskyblue;
+}
+
+.cell.x::before,
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after {
+    content: '';
+    position: absolute;
+    width: calc(var(--mark-size) * .15);
+    height: var(--mark-size);
+}
+
+.cell.x::before,
+.board.x .cell:not(.x):not(.circle):hover::before {
+    transform: rotate(45deg);
+}
+
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::after {
+    transform: rotate(-45deg);
+}
+
+.cell.circle::before,
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after  {
+    content: '';
+    position: absolute;
+    border-radius: 50%;
+}
+
+.cell.circle::before,
+.board.circle .cell:not(.x):not(.circle):hover::before {
+    width: var(--mark-size);
+    height: var(--mark-size);
+}
+
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::after {
+    width: calc(var(--mark-size) * .7);
+    height: calc(var(--mark-size) * .7);
+    background-color: white;
+}
+
+.gameover-message {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, .8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: seashell;
+    font-size: 5rem;
+    flex-direction: column;
+    display: none;
+}
+
+.gameover-message button {
+    font-size: 3rem;
+    background-color: white;
+    border: 1px solid black;
+    padding: .25rem .5em;
+    cursor: pointer;
+}
+
+.gameover-message button:hover {
+    background-color: black;
+    color: white;
+    border-color: white;
 }
